modify shop, sell your car

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                   <div class="header-table col-md-12">
                      <div class="brand">
                         <a href="index.html">
-                           <img src="/images/logo.png" style="margin-top: 10px; height: auto; width: 100%;">
+                           <img src="/images/logo.png">
                         </a>
                      </div>
                      <nav id="nav-wrap" class="main-nav">
