--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -142,4 +142,19 @@
       <button type="submit" href="/">Invia</button>
     </form>
   </div>
+
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/superfish.js"></script>
+   <script src="js/jquery.easing.js"></script>
+   <script src="js/wow.js"></script>
+   <script src="js/jquery.isotope.min.js"></script>
+   <script src="js/owl.carousel.min.js"></script>
+   <script src="js/jquery.magnific-popup.js"></script>
+   <script src="js/jflickrfeed.min.js"></script>
+   <script src="js/jquery.fitvids.js"></script>
+   <script src="js/jquery.fractionslider.min.js"></script>
+   <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+   <script type="text/javascript" src="js/SmoothScroll.js"></script>
+   <script src="js/main.js"></script>
 </body>   
