add single product

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       <![endif]-->
 </head>
 
-<body class="box-layout">
+<!--<body class="box-layout">-->
    <!-- Page Loader -->
-   <div class="page-loader">
+  <!--<div class="page-loader">
       <div class="loader">
          <span class="cssload-loading"></span>
       </div>
-   </div>
+   </div>-->
    <!-- End Page Loader -->
-   <div class="inner-conterner">
+  <!--<div class="inner-conterner">-->
       <!-- inner-conterner -->
-      <header class="site-header">
+      <!--<header class="site-header">-->
          <div class="header-inner">
             <!-- navigation panel -->
             <div class="container">
@@ -82,9 +82,8 @@
                </div>
                <!-- End navigation panel -->
             </div>
+         </div>   
             <!-- End navigation panel -->
-         </div>
-      </header>
       <!-- Slider -->
       <div class="slider-wrapper" style="height: 500vh;">
          <div class="fr-slider" >
@@ -270,8 +269,7 @@
             </footer>
          </div>
       </div>
-      <!-- End Footer -->
-   </div>
+   <!-- End Footer -->
    <!-- End inner-conterner -->
    <!-- ================================================== -->
    <!-- Placed js files at the end of the document so the pages load faster -->
