--- a/sell_my_car.html
+++ b/sell_my_car.html
@@ -133,7 +133,12 @@
           </td>
         </tr>
 
-        <tr><td>  
+        <tr>
+          <td>
+            <span class="targa">Targa</span>
+            <input class="fname" id="input" type="text" name="name" placeholder="" maxlength="6">
+          </td>
+          <td>  
             <label for="files">Foto</label>
             <input type="file" name="files" multiple><br><br>
           </td></tr>
