--- a/single_product.html
+++ b/single_product.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>VSB-MOTORS/MY-TRANSACTION</title>
+    <title>VSB-MOTORS/SINGLE-PRODUCT</title>
    <!-- ionicons Fonts for icons -->
    <link href="css/ionicons.min.css" rel="stylesheet">
    <!--Font for nav-bar-->
@@ -13,7 +13,7 @@
    <!-- bootstrap -->
    <link href="css/bootstrap.css" rel="stylesheet">
    <!-- Styles CSS-->
-   <link href="css/my_transaction.css" rel="stylesheet">
+   <link href="css/single_product.css" rel="stylesheet">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
@@ -55,6 +55,57 @@
                </nav>
             </div>
          </div>
+      </div>
+   </div>
+
+   <div class="container_card">
+      <h2>Mercedes-Benz Classe A</h2>
+      <div class="content">
+         <img src="/images/car1.jpg" alt="">
+         <table>
+            <tr>
+               <td>
+                  <h3>€ 8000</h3>
+               </td>
+            </tr>
+            <tr>
+               <td>
+                  <img src="/images/icon_key.png" alt="">
+                  <span>Usato</span>
+               </td>
+               <td>
+                  <img src="/images/icon_calendar.png" alt="">
+                  <span>2001</span>
+               </td>
+            </tr>
+            <tr>
+               <td>
+                  <img src="/images/icon_kilometer.png" alt="">
+                  <span>183.000 km</span>
+               </td>
+               <td>
+                  <img src="/images/icon_fuel.png" alt="">
+                  <span>Gasolio</span>
+               </td>
+            </tr>
+            <tr>
+               <td>
+                  <img src="/images/icon_cambio.png" alt="">
+                  <span>Automatico</span>
+               </td>
+               <td>
+                  <img src="/images/icon_proprietari.png" alt="">
+                  <span>3 Proprietari</span>
+               </td>
+            </tr>
+         </table>
+         <div class="concessionaria">
+            <h3>Venduta da:</h3>
+            <span>Schiatti Class</span>
+            <span>Correggio</span>
+            <span>0522639457</span>
+         </div>
+         <button type="submit">Prenota l'ordine</button>
       </div>
    </div>
 </body>   
