--- a/index.html
+++ b/index.html
@@ -67,12 +67,18 @@
                            <li>
                               <a href="">Contact</a>
                            </li>
-                           <li class="has-children" style="width: 6%; height: auto;">
+                           <li class="has-children" >
                               <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
-                              <ul class="dropdown">
+                              <ul class="dropdown" style="border-top: 3px solid black;">
                                  <li><a href="sign_up.html">SIGN UP</a></li>
                                  <li><a href="sign_in.html">SIGN IN</a></li>
-                                 <li><a href="my_transaction.html">MY TRANSACTION</a></li>
+                                 <li class="has-children">
+                                    <a href="#">MY TRANSACTION</a>
+                                    <ul class="dropright" style="border-top: 3px solid black; position: absolute; left: 100%; top: 30%;">
+                                       <li><a href="my_transaction.html">SALES</a></li>
+                                       <li><a href="my_transaction.html">REGISTRATION</a></li>
+                                    </ul>
+                                 </li>   
                                  <li><a href="#">LOG OUT</a></li>
                               </ul>
                            </li>
