--- a/single_product.html
+++ b/single_product.html
@@ -61,7 +61,7 @@
    <div class="container_card">
       <h2>Mercedes-Benz Classe A</h2>
       <div class="content">
-         <img src="/images/car1.jpg" alt="">
+         <img src="/images/car1.jpg" alt="" class="img_car">
          <table>
             <tr>
                <td>
@@ -108,4 +108,19 @@
          <button type="submit">Prenota l'ordine</button>
       </div>
    </div>
+
+   <script src="js/jquery.min.js"></script>
+   <script src="js/bootstrap.min.js"></script>
+   <script src="js/superfish.js"></script>
+   <script src="js/jquery.easing.js"></script>
+   <script src="js/wow.js"></script>
+   <script src="js/jquery.isotope.min.js"></script>
+   <script src="js/owl.carousel.min.js"></script>
+   <script src="js/jquery.magnific-popup.js"></script>
+   <script src="js/jflickrfeed.min.js"></script>
+   <script src="js/jquery.fitvids.js"></script>
+   <script src="js/jquery.fractionslider.min.js"></script>
+   <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+   <script type="text/javascript" src="js/SmoothScroll.js"></script>
+   <script src="js/main.js"></script>
 </body>   
