modify dropdown homepage

--- a/index.html
+++ b/index.html
@@ -67,16 +67,16 @@
                            <li>
                               <a href="">Contact</a>
                            </li>
-                           <li class="has-children" >
+                           <li class="has-children" style="width: 4%; height: auto;">
                               <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
                               <ul class="dropdown" style="border-top: 3px solid black;">
                                  <li><a href="sign_up.html">SIGN UP</a></li>
                                  <li><a href="sign_in.html">SIGN IN</a></li>
                                  <li class="has-children">
                                     <a href="#">MY TRANSACTION</a>
-                                    <ul class="dropright" style="border-top: 3px solid black; position: absolute; left: 100%; top: 30%;">
+                                    <ul class="dropdown" style="border-top: 3px solid black; position: absolute; padding: 0; left: -100%; top: 30%;">
                                        <li><a href="my_transaction.html">SALES</a></li>
-                                       <li><a href="my_transaction.html">REGISTRATION</a></li>
+                                       <li><a href="my_transaction.html">REGISTRATIONS</a></li>
                                     </ul>
                                  </li>   
                                  <li><a href="#">LOG OUT</a></li>
