eliminazione file + aggiunta banner stile apple

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
          </div>
       </div>
       <!-- End Slider -->
+   
       <!-- About Section -->
       <div class="container-about">
          <div class="container">
@@ -188,6 +189,13 @@
          </div>
       </div>
       <!-- End About Section -->
+
+            <!-- Banner -->
+            <div class="container-banner">
+               <img src="/images/provabanner2.png" alt="">
+               <h3> Unisciti a noi, forniamo un servizio di qualità</h3>
+            </div>
+            <!-- End Banner-->
       <!-- Story Section -->
       <div class="story-container">
          <div class="story-wrapper wow fadeInUp">
@@ -287,7 +295,6 @@
    <script src="js/jquery.isotope.min.js"></script>
    <script src="js/owl.carousel.min.js"></script>
    <script src="js/jquery.magnific-popup.js"></script>
-   <script src="js/jflickrfeed.min.js"></script>
    <script src="js/jquery.fitvids.js"></script>
    <script src="js/jquery.fractionslider.min.js"></script>
    <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
