add new homepage in file prova

--- a/index.html
+++ b/index.html
@@ -31,17 +31,7 @@
       <![endif]-->
 </head>
 
-<!--<body class="box-layout">-->
-   <!-- Page Loader -->
-  <!--<div class="page-loader">
-      <div class="loader">
-         <span class="cssload-loading"></span>
-      </div>
-   </div>-->
-   <!-- End Page Loader -->
-  <!--<div class="inner-conterner">-->
-      <!-- inner-conterner -->
-      <!--<header class="site-header">-->
+<body class="box-layout">
          <div class="header-inner">
             <!-- navigation panel -->
             <div class="container">
@@ -68,7 +58,7 @@
                               <a href="">Contact</a>
                            </li>
                            <li class="has-children" style="width: 4%; height: auto;">
-                              <h3 class="user_icon"><i class="bi bi-person-circle"></i></h3>
+                              <h3 class="user_icon"><i class="bi bi-list"></i></h3>
                               <ul class="dropdown" style="border-top: 3px solid black;">
                                  <li><a href="sign_up.html">SIGN UP</a></li>
                                  <li><a href="sign_in.html">SIGN IN</a></li>
