--- a/prova.html
+++ b/prova.html
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <button class="button">Test Drive</button>
-      <button class="button">Test Drive</button>
+      <button class="button">Concessionarie</button>
       <div class="dropdown">
         <button class="dropbtn"><h1><i class="bi bi-person-circle" style="cursor: pointer;"></i></h1></button>
         <div id="myDropdown" class="dropdown-content">
@@ -80,61 +80,60 @@
   <a name="#about">
     <div class="container-about" style="margin-top: 45%;">
       <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-              <h3 class="title-un">WHO WE ARE</h3>
-              <p class="title-un-des">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, </p>
+         <div class="row">
+            <div class="col-md-12" style="margin-bottom: 2%;">
+               <h3 class="title-un">WHO WE ARE</h3>
+               <div class="title-un-icon"><i class="fa ion-ios-flame-outline"></i></div>
+               <p class="title-un-des">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, </p>
             </div>
-        </div>
-        <div class="row">
+         </div>
+         <div class="row">
             <div class="col-md-4">
-              <!-- Service item -->
-              <div class="service-box-sb wow fadeInUp">
+               <!-- Service item -->
+               <div class="service-box-sb wow fadeInUp">
                   <div class="service-img">
-                    <img src="images/sas.jpg" width="60%" height="auto">
+                     <img src="images/sas.jpg" alt="" width="350rem" height="auto">
                   </div>
                   <div class="service-info">
-                    <h5>VENDORS</h5>
-                    <div class="desc">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                    </div>
-                  </div>  
-              </div>
-              <!-- End Service item -->
+                     <h5>VENDORS</h5>
+                     <div class="desc">
+                        Le migliori concessioarie d'Italia sono registrate proprio qui da noi, corri a vederle cliccando l'immagine!
+                     </div>
+                  </div>
+               </div>
+               <!-- End Service item -->
             </div>
             <div class="col-md-4">
-              <!-- Service item -->
-              <div class="service-box-sb wow fadeInUp" data-wow-delay=".2s">
+               <!-- Service item -->
+               <div class="service-box-sb wow fadeInUp" data-wow-delay=".2s">
                   <div class="service-img">
-                    <img src="images/sasa.jpg" width="60%" height="auto">
+                     <img src="images/sasa.jpg" alt="" width="350rem" height="auto">
                   </div>
                   <div class="service-info">
-                    <h5>VSB-MOTORS</h5>
-                    <div class="desc">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                    </div>
+                     <h5>VSB-MOTORS</h5>
+                     <div class="desc">
+                      L'intermediario di fiducia che ti aiuterà a trovare l'auto dei tuoi sogni!                     </div>
                   </div>
-              </div>
-              <!-- End Service item -->
+               </div>
+               <!-- End Service item -->
             </div>
             <div class="col-md-4">
-              <!-- Service item -->
-              <div class="service-box-sb wow fadeInUp" data-wow-delay=".4s">
+               <!-- Service item -->
+               <div class="service-box-sb wow fadeInUp" data-wow-delay=".4s">
                   <div class="service-img">
-                    <img src="images/sasaa.jpg" width="60%" height="auto">
+                     <img src="images/sasaa.jpg" alt="" width="350rem" height="auto">
                   </div>
                   <div class="service-info">
-                    <h5>CLIENT</h5>
-                    <div class="desc">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
-                    </div>
+                     <h5>CLIENT</h5>
+                     <div class="desc">
+                      Le migliori concessioarie d'Italia sono registrate proprio qui da noi, corri a vederle cliccando l'immagine!                     </div>
                   </div>
-              </div>
-              <!-- End Service item -->
+               </div>
+               <!-- End Service item -->
             </div>
-        </div>
+         </div>
       </div>
-    </div>
+   </div>
   </a>
 
   <video width="1400" height="600" autoplay muted loop>
@@ -142,5 +141,19 @@
     <source src="movie.ogg" type="video/ogg">
     Your browser does not support the video tag.
   </video>
+
+  <script src="js/jquery.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/superfish.js"></script>
+  <script src="js/jquery.easing.js"></script>
+  <script src="js/wow.js"></script>
+  <script src="js/jquery.isotope.min.js"></script>
+  <script src="js/owl.carousel.min.js"></script>
+  <script src="js/jquery.magnific-popup.js"></script>
+  <script src="js/jquery.fitvids.js"></script>
+  <script src="js/jquery.fractionslider.min.js"></script>
+  <script src="js/jquery-ui-1.10.4.custom.min.js"></script>
+  <script type="text/javascript" src="js/SmoothScroll.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
