--- a/index.html
+++ b/index.html
@@ -46,19 +46,20 @@
                         <div id="mobnav-btn"> </div>
                         <ul class="sf-menu">
                            <li>
-                              <a href="index.html">Home</a>
+                              <a href="shop.html" class="effect">Store</a>                             
                            </li>
                            <li>
-                              <a href="shop.html">Shop</a>                             
+                              <a href="sell_my_car.html" class="effect">Sell your car</a>
                            </li>
                            <li>
-                              <a href="sell_my_car.html">Sell your car</a>
+                              <a href="#about" class="effect">About</a>
                            </li>
                            <li>
-                              <a href="">Contact</a>
+                              <a href="" class="effect">Contact</a>
                            </li>
-                           <li class="has-children" style="width: 4%; height: auto;">
-                              <h3 class="user_icon"><i class="bi bi-list"></i></h3>
+                           <button class="button" style="margin-left: 5%;">Test Drive</button>
+                           <li class="has-children" style="width: 10%; height: auto;">
+                              <h2 class="user_icon"><i class="bi bi-person-circle" style="cursor: pointer;"></i></h2>
                               <ul class="dropdown" style="border-top: 3px solid black;">
                                  <li><a href="sign_up.html">SIGN UP</a></li>
                                  <li><a href="sign_in.html">SIGN IN</a></li>
@@ -81,36 +82,37 @@
          </div>   
             <!-- End navigation panel -->
       <!-- Slider -->
-      <div class="slider-wrapper" style="height: 500vh;">
+      <div class="slider-wrapper" >
          <div class="fr-slider" >
             <div class="fs_loader"></div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/features_bg.jpg" alt="Slide">
-               <img data-position="155,554" data-delay="300" data-in="fade" data-out="fade" src="images/slider/e1.png" alt="Enfold">
-               <img data-position="185,430" data-delay="600" data-in="fade" data-out="fade" src="images/slider/e2.png" alt="Enfold">
-               <img data-position="236,449" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/e3.png" alt="Enfold">
-               <img data-position="322,468" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/e4.png" alt="Enfold">
-               <img data-position="384,446" data-delay="1800" data-in="fade" data-out="fade" src="images/slider/e5.png" alt="Enfold">
+               <img data-position="155,554" data-delay="300" data-in="fade" data-out="fade" src="images/slider/e1.png" alt="">
+               <img data-position="185,430" data-delay="600" data-in="fade" data-out="fade" src="images/slider/e2.png" alt="">
+               <img data-position="236,449" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/e3.png" alt="">
+               <img data-position="322,468" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/e4.png" alt="">
+               <img data-position="384,446" data-delay="1800" data-in="fade" data-out="fade" src="images/slider/e5.png" alt="">
             </div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/slide001.jpg" alt="Slide">
-               <img data-position="108,282" data-delay="300" data-in="fade" data-out="fade" src="images/slider/s2e1.png" alt="Enfold">
-               <img data-position="262,131" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s2e2.png" alt="Enfold">
-               <img data-position="322,202" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e3.png" alt="Enfold">
-               <img data-position="369,60" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="Enfold">
+               <img data-position="108,282" data-delay="300" data-in="fade" data-out="fade" src="images/slider/s2e1.png" alt="">
+               <img data-position="262,131" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s2e2.png" alt="">
+               <img data-position="322,202" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e3.png" alt="">
+               <img data-position="369,60" data-delay="1400" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="">
             </div>
             <div class="slide">
                <img data-fixed class="slide-bg" src="images/slide3.jpg" alt="Slide">
-               <img data-position="93,505" data-delay="300" data-in="fade" data-out="fade" src="images/slider/deer.png" alt="Enfold">
-               <img data-position="263,274" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s3e1.png" alt="Enfold">
-               <img data-position="338,316" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="Enfold">
-               <a data-position="440,485" data-delay="1500" data-in="fade" data-out="fade" class="button white-color">Purchase Theme </a>
+               <img data-position="93,505" data-delay="300" data-in="fade" data-out="fade" src="images/slider/deer.png" alt="">
+               <img data-position="263,274" data-delay="600" data-in="fade" data-out="fade" src="images/slider/s3e1.png" alt="">
+               <img data-position="338,316" data-delay="1000" data-in="fade" data-out="fade" src="images/slider/s2e4.png" alt="">
+               <a data-position="440,485" data-delay="1500" data-in="fade" data-out="fade" class="button white-color">Purchase Now </a>
             </div>
          </div>
       </div>
       <!-- End Slider -->
    
       <!-- About Section -->
+      <a name="about"></a>
       <div class="container-about">
          <div class="container">
             <div class="row">
@@ -125,12 +127,13 @@
                   <!-- Service item -->
                   <div class="service-box-sb wow fadeInUp">
                      <div class="service-img">
-                        <img src="images/sas.jpg" alt="Enfold">
+                        <img src="images/sas.jpg" alt="">
                      </div>
                      <div class="service-info">
                         <h5>VENDORS</h5>
                         <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                           Le migliori concessionarie d'Italia sono registrate proprio qui da noi, corri a vederle cliccando l'immagine!
+                           <br>
                            <a class="see-more" href="#">
                         See More &rarr;
                         <div class="line"></div>
@@ -144,12 +147,12 @@
                   <!-- Service item -->
                   <div class="service-box-sb wow fadeInUp" data-wow-delay=".2s">
                      <div class="service-img">
-                        <img src="images/sasa.jpg" alt="Enfold">
+                        <img src="images/sasa.jpg" alt="">
                      </div>
                      <div class="service-info">
                         <h5>VSB-MOTORS</h5>
                         <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                           VSB-Motors sarà il tuo intermediario di fiducia, qui potrai finalmente trovare l'auto dei tuoi sogni!
                            <a class="see-more" href="#">
                         See More &rarr;
                         <div class="line"></div>
@@ -163,12 +166,13 @@
                   <!-- Service item -->
                   <div class="service-box-sb wow fadeInUp" data-wow-delay=".4s">
                      <div class="service-img">
-                        <img src="images/sasaa.jpg" alt="Enfold">
+                        <img src="images/sasaa.jpg" alt="">
                      </div>
                      <div class="service-info">
                         <h5>CLIENT</h5>
                         <div class="desc">
-                           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris iaculis sapien sit amet arcu ornare, non commodo ligula consectetur adipiscing elit.
+                           Clienti da tutto il mondo visitano la nostra piattaforma, il gioco è semplice e veloce corri nel nostro Store e divertiti!
+                           <br>
                            <a class="see-more" href="#">See More &rarr;<div class="line"></div></a>
                         </div>
                      </div>
@@ -180,103 +184,30 @@
       </div>
       <!-- End About Section -->
 
-            <!-- Banner -->
-            <div class="container-banner">
-               <img src="/images/provabanner2.png" alt="">
-               <h3> Unisciti a noi, forniamo un servizio di qualità</h3>
+      <section class="about section">
+         <div class="about__container container grid">
+            <div class="about__group">
+               <img src="/images/about.jpg" alt="" class="about__img">
             </div>
-            <!-- End Banner-->
-      <!-- Story Section -->
-      <div class="story-container">
-         <div class="story-wrapper wow fadeInUp">
-            <div class="story-info ">
-               <!--<div class="big-font-title">
-                  <h1>We do something special </h1>
-               </div>
-               <div class="story-bio">
-                  <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat,</p>
-               </div>-->
-               <video width="1400" height="600" autoplay muted loop>
-                  <source src="video/video1.mp4" type="video/mp4">
-                  <source src="movie.ogg" type="video/ogg">
-                  Your browser does not support the video tag.
-                </video>
+
+            <div class="about__data">
+               <h2 class="section__title about__title">
+                  Machines With <br> Future Technology
+               </h2>
+               <p class="about__description">
+                  See the future with high-performance electric cars produced by renowed brands. They feature futuristic builds and designs with new and innovative platforms that last a long time.
+               </p>
+               <a href="" class="button__about">KNOW MORE</a>
             </div>
          </div>
-      </div>
-      <!-- End Story Section -->
+      </section>
 
-
-
-
-      <!-- Footer area -->
-      <div class="footer-area-container">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-3">
-                  <div class="footer-widget">
-                     <a href="index.html"><h4 class="footer-widget-title">VSB-Motors</h4></a>
-                     <p>Con noi avrai accesso all'inventario di tuttI Vendors Partner presenti in Italia e potrai scegliere l'auto più adatta alle tue esigenze.</p>
-                  </div>
-               </div>
-               <div class="col-md-3">
-                  <div class="footer-widget widget_nav_menu">
-                     <h4 class="footer-widget-title">Get In Touch</h4>
-                     <p>Caecenas wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl.</p>
-                     <div> <i class="ion-ios-location-outline"></i> Moonshine St. 14/05 Light City
-                        <br>
-                        <i class="ion-ios-telephone-outline"></i> 00 (123) 456 78 90
-                        <br>
-                        <i class="ion-paper-airplane"></i> <a href="first.last@email.com"> first.last@email.com</a>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-md-3">
-                  <div class="footer-widget widget_nav_menu">
-                     <h4 class="footer-widget-title">LINKS</h4>
-                     <ul>
-                        <li class="menu-item"><a href="#"> Brand Creation  </a></li>
-                        <li class="menu-item"><a href="#"> Press inquiries</a></li>
-                        <li class="menu-item"><a href="#"> Corporate Identity </a></li>
-                        <li class="menu-item"><a href="#"> Company Analysis </a></li>
-                        <li class="menu-item"><a href="#"> Creative homepage </a></li>
-                     </ul>
-                  </div>
-               </div>
-               <div class="col-md-3">
-                  <div class="footer-widget">
-                     <h4 class="footer-widget-title">Flickr stream</h4>
-                     <ul id="cbox" class="popup-gallery flickr-thumbs"></ul>
-                  </div>
-               </div>
-            </div>
-         </div>
-      </div>
-      <!-- End Footer area -->
-      <!-- Footer -->
-      <div class="footer-holder">
-         <div class="container">
-            <footer class="site-footer">
-               <div class="row">
-                  <div class="col-md-6">
-                     <p>© Copyright 2016 | <a href="http://templatestock.co" target="_blank">Template Stock</a></p>
-                  </div>
-                  <div class="col-md-6">
-                     <ul class="footer-nav">
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Privacy</a></li>
-                     </ul>
-                  </div>
-               </div>
-            </footer>
-         </div>
-      </div>
-   <!-- End Footer -->
-   <!-- End inner-conterner -->
-   <!-- ================================================== -->
-   <!-- Placed js files at the end of the document so the pages load faster -->
+      <video autoplay muted loop>
+         <source src="video/video1.mp4" type="video/mp4">
+         <source src="movie.ogg" type="video/ogg">
+         Your browser does not support the video tag.
+      </video>
+ 
    <script src="js/jquery.min.js"></script>
    <script src="js/bootstrap.min.js"></script>
    <script src="js/superfish.js"></script>
